<resources>
    <string name="app_name">Cadastro de Usuário</string>
    <string name="mensagem_carregando">Aguarde enquanto a app é carregada&#8230;</string>
    <string name="fragment_novo_usuario">Novo Usuário</string>
    <string name="fragmento_1">Fragmento 1</string>
    <string name="fragmento_2">Fragmento 2</string>
    <string name="label_nome">Nome</string>
    <string name="label_username">Nome de Usuário</string>
    <string name="label_senha">Senha</string>
    <string name="label_confirmar_senha">Confirmar Senha</string>
    <string name="botao_cadastrar">Cadastrar</string>
    <string name="msg_cadastro">Usuário cadastrado!</string>
    <string name="abrir_drawer">Abrir menu</string>
    <string name="fechar_drawer">Fechar menu</string>
    <string name="label_id">ID</string>
    <string name="fragment_perfil_usuario">Perfil do Usuário</string>
    <string-array name="lista_menu">
        <item>Fragmento 1</item>
        <item>Fragmento 2</item>
        <item>Novo Usuário</item>
    </string-array>
</resources>
